Added the filter interface for all elements. TextElement are now linebreak capable. Text is no longer drawn outside the elements bounds. Drawing is simplified. All kind of shapes can be painted now. OutputTargets contain a state which can be saved and restored. CoordinateTransformation is/can be done by an cursor assigned to the Target All Targets have moved into an own package. All TextElement descentants are now deprecated and no longer used. The parser understands relative positions for X,Y,Width and Height attributes.  (use 100% to get full width 50% for half and so on).

--- a/jfreereport/source/com/jrefinery/report/io/package.html
+++ b/jfreereport/source/com/jrefinery/report/io/package.html
@@ -2,5 +2,8 @@
 <html>
 <body bgcolor="white">
 Classes for reading XML-based report definitions.
+
+ToDo: Adjust the ParserFactories to be more abstract, so that extending one or all factories
+would be easier. Adjust ElementFactory to support ItemFactory as intended a long time ago.
 </body>
 </html>
