--- a/jfreereport/source/com/jrefinery/report/filter/package.html
+++ b/jfreereport/source/com/jrefinery/report/filter/package.html
@@ -20,7 +20,7 @@ elements are
 <h2>How to use the FilterInterface</h2>
 <p>
 All data is read from DataSource implementations. A DataSource encapsulates a single
-value, which is read by an DataTarget. An object which implements both DataSource and
+value, which is read by a DataTarget. An object which implements both DataSource and
 DataTarget acts as filter, it modifies the value before it is returned to the next
 DataTarget.
 </p>
