--- a/jfreereport/source/com/jrefinery/report/io/package.html
+++ b/jfreereport/source/com/jrefinery/report/io/package.html
@@ -10,6 +10,9 @@ or in the distribution package.
 <p>
 This parser uses deprecated element classes. These classes will get not extension
 for new features and as soon as the discrepancy beween implemented and possible features
-gets too huge, this parser will be discontinued.
+gets too huge, this parser will be discontinued and a new implementation will be started.
+<p>
+After this point no new features are added to the old parser, and the parser will remain active
+for the sake of compatibility.
 </body>
 </html>
