Unified access to data sources using a DataRow object.
Functions, Columns from the tablemodel and in the near future expressions can
be queried using this interface. An element or function does no longer need
to know whether its data is retrieved from a function or element making
programming easier.

--- a/jfreereport/source/com/jrefinery/report/package.html
+++ b/jfreereport/source/com/jrefinery/report/package.html
@@ -2,5 +2,11 @@
 <html>
 <body bgcolor="white">
 Main classes in the JFreeReport Class Library.
+<p>
+Functions cannot be added to the report once the report generation has started.
+Do not modify the report structure after the report generation is started,
+unless you know exactly what you are doing. It is safe to modify the report definition
+<b>before</b> the report is started.
+</p>
 </body>
 </html>
