--- a/jfreereport/source/com/jrefinery/report/function/package.html
+++ b/jfreereport/source/com/jrefinery/report/function/package.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
 <html>
 <body bgcolor="white">
+The function package contains statefull functions and stateless expression for JFreeReport.
 </body>
 </html>
