--- a/jfreereport/source/com/jrefinery/report/package.html
+++ b/jfreereport/source/com/jrefinery/report/package.html
@@ -1,12 +1,13 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
 <html>
 <body bgcolor="white">
-Main classes in the JFreeReport Class Library.
+Main classes in the JFreeReport class library.
 <p>
-Functions cannot be added to the report once the report generation has started.
-Do not modify the report structure after the report generation is started,
-unless you know exactly what you are doing. It is safe to modify the report definition
-<b>before</b> the report is started.
+Functions cannot be added to the report once the report generation has
+started. Do not modify the report structure after the report
+generation is started, unless you know exactly what you are doing. It
+is safe to modify the report definition <b>before</b> the report is
+started.
 </p>
 </body>
 </html>
