--- a/jfreereport/source/com/jrefinery/report/targets/pageable/operations/package.html
+++ b/jfreereport/source/com/jrefinery/report/targets/pageable/operations/package.html
@@ -3,5 +3,12 @@
 <body bgcolor="white">
 Operations that can be applied to any OutputTarget.  This package also contains
 utility classes for performing alignment of two rectangles.
+<p>
+Content is created from Elements by using a suitable OperationModul.
+The OperationFactory is used to get a OperationModul for the content of the element.
+OperationModules define methods to create content and to convert content into
+physical operations. Feel free to add more OperationModules to the Factory.
+<p>
+ToDo: Formated Text OperationModul to display preformated text (like HTML Content).
 </body>
 </html>
