Javadoc and Checkstyle updates.

--- a/jfreereport/source/com/jrefinery/report/filter/package.html
+++ b/jfreereport/source/com/jrefinery/report/filter/package.html
@@ -1,7 +1,10 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
 <html>
 <body bgcolor="white">
-<h2>Basics flow of data in JFreeReport</h2>
+Support for the creation of 'filter chains' used to transform data objects into
+other forms for presentation on reports.
+<p>
+<h2>Basic flow of data in JFreeReport</h2>
 Three interfaces create the abstract way of the dataflow in JFreeReport.
 <p>
 <h3>DataSource</h3>
