--- a/jfreereport/source/com/jrefinery/report/targets/pageable/output/package.html
+++ b/jfreereport/source/com/jrefinery/report/targets/pageable/output/package.html
@@ -1,6 +1,8 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
 <html>
 <body bgcolor="white">
-Output target interfaces and classes.
+Output target interfaces and classes.  There is support for on-screen print
+preview, printers, and export to PDF.  Other output targets will be supported in
+the future.
 </body>
 </html>
