--- a/jfreereport/source/com/jrefinery/report/action/package.html
+++ b/jfreereport/source/com/jrefinery/report/action/package.html
@@ -1,6 +1,10 @@
 <html>
 <body>
-The action package contains all base classes for the PreviewFrames actions. The actions in this
-package implement all locales specific initialisations. To change the apeareance of buttons and
-menus alter the entries in the resourcebundles instead of rewriting the code of this package.
+Actions for the menu items and toolbar buttons used in the
+{@link com.jrefinery.report.preview.PreviewFrame} and the
+{@link com.jrefinery.report.preview.PreviewDialog}.
+<p>
+The actions implement all locale-specific initialisations. To change the appearance of buttons
+and menu items alter the entries in the resource bundles instead of rewriting the code of
+this package.
 </body>
