--- a/jfreereport/source/com/jrefinery/report/targets/pageable/operations/package.html
+++ b/jfreereport/source/com/jrefinery/report/targets/pageable/operations/package.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2 Final//EN">
 <html>
 <body bgcolor="white">
-Operations that can be applied to any OutputTarget.  This package also contains
-utility classes for performing alignment of two rectangles.
+Operations that can be applied to any {@link com.jrefinery.report.targets.pageable.OutputTarget}.
+This package also contains utility classes for performing alignment of two rectangles.
 <p>
 Content is created from Elements by using a suitable OperationModul.
 The OperationFactory is used to get a OperationModul for the content of the element.
