--- a/jfreereport/source/com/jrefinery/report/targets/base/content/package.html
+++ b/jfreereport/source/com/jrefinery/report/targets/base/content/package.html
@@ -8,5 +8,9 @@ details about the content itself.
 <p>
 Content may be split into several parts, so that portions of content for specific bounds
 can be extracted.
+<p>
+To create contents, an LayoutSupport defines a ContentFactory. This factory is resopnsible
+to create the content from the Element's value, if the OutputTarget does support the elements
+content type. 
 </body>
 </html>
