--- a/jfreereport/source/com/jrefinery/report/targets/pageable/operations/package.html
+++ b/jfreereport/source/com/jrefinery/report/targets/pageable/operations/package.html
@@ -4,10 +4,10 @@
 Operations that can be applied to any {@link com.jrefinery.report.targets.pageable.OutputTarget}.
 This package also contains utility classes for performing alignment of two rectangles.
 <p>
-Content is created from Elements by using a suitable OperationModul.
+Content is created from Elements by using a ContentFactory.
 The OperationFactory is used to get a OperationModul for the content of the element.
-OperationModules define methods to create content and to convert content into
-physical operations. Feel free to add more OperationModules to the Factory.
+OperationModules define methods to convert content into physical operations.
+Feel free to add more OperationModules to the Factory.
 <p>
 ToDo: Formated Text OperationModul to display preformated text (like HTML Content).
 </body>
