--- a/jfreereport/source/com/jrefinery/report/targets/pageable/output/package.html
+++ b/jfreereport/source/com/jrefinery/report/targets/pageable/output/package.html
@@ -2,7 +2,7 @@
 <html>
 <body bgcolor="white">
 Output target interfaces and classes.  There is support for on-screen print
-preview, printers, and export to PDF.  Other output targets will be supported in
-the future.
+preview, printers, export to PDF and plain text. More output targets are supported
+by other ReportProcessors.
 </body>
 </html>
