--- a/jfreereport/source/com/jrefinery/report/targets/table/rtf/package.html
+++ b/jfreereport/source/com/jrefinery/report/targets/table/rtf/package.html
@@ -1,5 +1,7 @@
 <html>
 <body>
+RTF file output, using iText.
+<p>
 This package is no final version.  iText does not support RTF very well,
 so this target will be ported to an different RTF writer in a later version.
 <p>
