Updated PackageDocumentation, some fixes in the  PlainTextOutputTarget

--- a/jfreereport/source/com/jrefinery/report/io/ext/factory/datasource/package.html
+++ b/jfreereport/source/com/jrefinery/report/io/ext/factory/datasource/package.html
@@ -4,5 +4,10 @@
 The {@link
 com.jrefinery.report.io.ext.factory.datasource.DataSourceFactory} interface
 and related classes.
+<p>
+The DataSourceFactory is used to describe and create @link com.jrefinery.report.filter.DataSource}
+implementations. The DataSource description is provided as ObjectDescription; as all DataSources
+have Getter and Setter methods defined to access their properties, generic BeanDescriptions are
+used to descripe the data sources. 
 </body>
 </html>
