--- a/jfreereport/source/com/jrefinery/report/io/ext/factory/objects/package.html
+++ b/jfreereport/source/com/jrefinery/report/io/ext/factory/objects/package.html
@@ -3,5 +3,17 @@
 <body bgcolor="white">
 The {@link com.jrefinery.report.io.ext.factory.objects.ClassFactory}
 interface and related classes.
+<p>
+The {@link com.jrefinery.report.io.ext.factory.objects.ClassFactory} and the
+{@link com.jrefinery.report.io.ext.factory.objects.ObjectDescription} are used to descripe,
+generate and serialize objects in a generalized way.
+<p>
+ObjectDescriptions are used to descripe the properties of an object. The properties can
+either be an primitive object (String, Long, Integer, Short, Byte, Character, Boolean) or
+an compound object. Compound objects may have other primitive or compound objects defined
+as properties.
+<p>
+You may use the ObjectReferenceGenerator to create the Reference-Documentation for all
+known Object-Description implementations.
 </body>
 </html>
