--- a/jfreereport/source/com/jrefinery/report/io/ext/factory/stylekey/package.html
+++ b/jfreereport/source/com/jrefinery/report/io/ext/factory/stylekey/package.html
@@ -3,5 +3,10 @@
 <body bgcolor="white">
 The {@link com.jrefinery.report.io.ext.factory.stylekey.StyleKeyFactory}
 interface and related classes.
+<p>
+The StyleKeyFactory is used to create StyleKeys in a generic way. 
+<p>
+You may use the StyleKeyReferenceGenerator to create the Reference-Documentation for all
+known StyleKey-Description implementations.
 </body>
 </html>
