--- a/jfreereport/source/com/jrefinery/report/io/ext/writer/package.html
+++ b/jfreereport/source/com/jrefinery/report/io/ext/writer/package.html
@@ -5,5 +5,10 @@ Support for writing {@link com.jrefinery.report.JFreeReport} instances
 to a character stream in XML format.  This package also contains a
 utility application for converting the old XML format into the new XML
 format.
+<p>
+The ReportConverter can either be used in command line mode (class
+<code>com.jrefinery.report.io.ext.writer.ReportConverter</code>) or with
+a simple GUI implementation (class
+<code>com.jrefinery.report.io.ext.writer.ReportConverterGUI</code>).
 </body>
 </html>
