--- a/jfreereport/source/com/jrefinery/report/io/ext/factory/elements/package.html
+++ b/jfreereport/source/com/jrefinery/report/io/ext/factory/elements/package.html
@@ -4,5 +4,7 @@
 The {@link
 com.jrefinery.report.io.ext.factory.elements.ElementFactory} interface
 and related classes.
+<p>
+The Element factory is used to create Elements based on their content type.
 </body>
 </html>
