--- a/jfreereport/source/com/jrefinery/report/io/simple/package.html
+++ b/jfreereport/source/com/jrefinery/report/io/simple/package.html
@@ -11,9 +11,9 @@ or in the distribution package.
 <p>
 The document type declaration for this definition type is
 <pre>
-<!DOCTYPE report-definition
+&lt;!DOCTYPE report-definition
   PUBLIC "-//JFreeReport//DTD report definition//EN//simple"
-         "http://jfreereport.sourceforge.net/report.dtd">
+         "http://jfreereport.sourceforge.net/report.dtd"&gt;
 </pre>
 </body>
 </html>
