--- a/jfreereport/source/com/jrefinery/report/io/ext/package.html
+++ b/jfreereport/source/com/jrefinery/report/io/ext/package.html
@@ -2,5 +2,26 @@
 <html>
 <body bgcolor="white">
 The base package for the JFreeReport "extended" parser.
+<p>
+An extensible report definition parser. The parser uses a generic
+report definition syntax to fully describe the report. The parser
+heavily relies on factories to create elements and objects.
+<p>
+The used generic approach leads to a complex and very complex and
+technically detailed report definition, which can be confusing and
+difficult to use for human authors.
+<p>
+The DTD for the reportdefinition files can be found at
+<a href="http://jfreereport.sourceforge.net/extreport.dtd">http://jfreereport.sourceforge.net/extreport.dtd</a>
+or in the distribution package.
+<p>
+The document type declaration for this definition type is
+<pre>
+&lt;!DOCTYPE report-definition
+  PUBLIC "-//JFreeReport//DTD report definition//EN//extended"
+         "http://jfreereport.sourceforge.net/extreport.dtd"&gt;
+</pre>
+</body>
+</html>
 </body>
 </html>
