To clear Javadoc error.

--- a/jfreereport/source/com/jrefinery/report/targets/support/itext/package.html
+++ b/jfreereport/source/com/jrefinery/report/targets/support/itext/package.html
@@ -1,7 +1,9 @@
 <html>
 <body>
-iText font support. iText uses a set of own font descriptions and does heavily
-depend on PDF-Specific features even in generic classes. This package encapsulates
-all tasks required to create iText fonts.
+Support for iText fonts. 
+<p>
+iText uses a set of own font descriptions and does heavily depend on
+PDF specific features even in generic classes. This package
+encapsulates all tasks required to create iText fonts.
 </body>
 </html>
