--- a/jfreereport/source/com/jrefinery/report/preview/package.html
+++ b/jfreereport/source/com/jrefinery/report/preview/package.html
@@ -3,5 +3,8 @@
 </head>
 <body>
 Support for on-screen preview of reports.
+<p>
+This package also includes the dialogs used to initiate the export of
+reports to other formats (CSV, HTML, PDF and so on).
 </body>
 </html>
