--- a/jfreereport-ext/source/overview.html
+++ b/jfreereport-ext/source/overview.html
@@ -3,5 +3,9 @@
 <title>JFreeReport extension project</title>
 </head>
 <body>
+The extension project host all external resources, demos and components, that are
+not core functionality. This allows us to keep the core library small and clean,
+while tasks with extensive library dependencies or tasks which are of limited use for
+the mainstream users can be collected and maintained in a controlled way.
 </body>
 </html>
