--- a/jfreereport-ext/webapp/index.html
+++ b/jfreereport-ext/webapp/index.html
@@ -1,11 +1,36 @@
 <html>
 <head><title>JFreeReport servlet</title></head>
 <body>
+<h3>JFreeReport servlet examples</h3>
 <ul>
     <li><a href="pdfreport">PDF-Servlet</a>
+    <p>
+    This example generates a PDF file and opens this file in the current
+    browser window using your favourite PDF-plugin.
+    </p>
     <li><a href="htmlreport">HTML-Servlet</a>
+    <p>
+    This generates a stream-HTML file. The main restriction of StreamHTML is
+    that no images will be generated, so the icons column will remain empty.
+    The only image type supported is the external referenced image, a image
+    supplied by an HTML or FTP url.
+    </p><p>
+    If you want to generate images and publish them using a servlet or JSP, then
+    you'll have to switch to either the DirHtmlFilesystem or the ZipHtmlFilesystem.
+    Both output systems are able to generate and manage generated images.
+    </p>
     <li><a href="pngreport?page=0">First page of the JPEG-Servlet</a>
+    <p>
+    This prints the first page of the demo report as PNG file. It is a simple and
+    quick example, how to reference a page within the PNG-Servlet.
+    </p>
     <li><a href="png-servlet-frontend.jsp">The complete PNG report</a>
+    <p>
+    This JSP wraps up the PNG report process and generates a HTML file, which
+    contains the generated PNG files. The generated html page contains all PNG
+    files, it should be easy to modify the provided page and add browsing over
+    the generated content. This task is left to the readed as excercise :)
+    </p>
 </ul>
 </body>
 </html>
