--- a/jfreereport/source/com/jrefinery/report/package.html
+++ b/jfreereport/source/com/jrefinery/report/package.html
@@ -15,5 +15,67 @@ started.
 processor must not be reused for other purposes.
 </ul>  
 </p>
+<h2>Groups</h2>
+<p>
+A group is a set of database rows, where the contents of the group
+fields are equal for all rows.
+</p>
+<p>
+Lets look at the following table:
+</p>
+<p>
+<table>
+<tr><th>Car</th><th>Color</th><th>Price</th></tr>
+<tr><td>Toyota</td><td>blue</td><td>10.000</td></tr>
+<tr><td>Toyota</td><td>blue</td><td>20.000</td></tr>
+<tr><td>Toyota</td><td>red</td><td>15.000</td></tr>
+<tr><td>Lexus</td><td>blue</td><td>25.000</td></tr>
+<tr><td>Lexus</td><td>yellow</td><td>15.000</td></tr>
+<tr><td>BMW</td><td>yellow</td><td>40.000</td></tr>
+<tr><td>BMW</td><td>blue</td><td>35.000</td></tr>
+<tr><td>BMW</td><td>green</td><td>5.000</td></tr>
+</table>
+</p>
+<p>
+ Groups are always defined on sorted tables.
+ A group is defined by selecting one or more rows, which should
+ form the group. A group instance will contain all rows from the
+ beginning of the group until one of the group fields changes.
+</p>
+<p>
+ Lets select the row car for our group:
+</p>
+<p>
+ Selecting that row as group argument will result in 3 group instances.
+ The first group instance will contain the first 3 rows (as the contents
+ of these rows are equal).
+</p>
+<p>
+ The next instance will contain all rows of the "Lexus" car and the
+ last group contains all rows from the "BMW" rows.
+</p>
+<p>
+ If a group is defined by more than one field, then the group will end,
+ if one of the group member fields changes.
+</p>
+<p>
+ Lets define a group which consists of "Car" and "Color".
+</p>
+<p>
+ The first instance of the group will contain the first 2 rows (Toyota,blue).
+ Then the value in the column "Color" changes, so a new group
+ instance is started. This new group contains a single row, as the
+ column "Car" in the next row will contain a different value.
+</p>
+<p>
+ The next two group instances are "Lexus, blue" and "Lexus, yellow", both
+ group instances contain 1 row, as the color changes after 1 row.
+</p>
+<p>
+ The next row starts a new group, as the column "Car" contains a different
+ value (BWM instead of Lexus). It doesn't matter, that the color is still
+ equal, to end a group instance, it is sufficient that one column value
+ changed.
+</p>
 </body>
 </html>
