Updated iText to version 1.0, documentation and performance improvments for StyleSheetCollection...

--- a/jfreereport/source/com/jrefinery/report/targets/table/rtf/package.html
+++ b/jfreereport/source/com/jrefinery/report/targets/table/rtf/package.html
@@ -9,6 +9,10 @@ At the moment, the rtf output does not support ROWSPANning  of cells or
 FONTs other than the standard fonts Serif, SansSerif or Courier.
 <p>
 This package is not enabled by default and not included in the preview frame.
-There will be no support for bug in this package. 
+There will be no support for bug in this package.
+<p>
+The current implementation is not suited for huge documents, as the whole document
+is held in memory until the complete table was created. This implementation will
+be fixed in the future. 
 </body>
 </html>
