--- a/jfreereport/source/org/jfree/report/modules/parser/ext/package.html
+++ b/jfreereport/source/org/jfree/report/modules/parser/ext/package.html
@@ -21,7 +21,76 @@ The document type declaration for this definition type is
   PUBLIC "-//JFreeReport//DTD report definition//EN//extended"
          "http://jfreereport.sourceforge.net/extreport.dtd"&gt;
 </pre>
+<p>
+The template inheritance is implemented using various instances of the
+same template class with variing parameter fill level.
+<p> 
+<h3>ParserHints used by this parser:</h3>
+<p>
+<table>
+  <tr>
+    <th>Bound to</th>
+    <th>HintName</th>
+    <th>HintType</th>
+    <th>Description</th>
+  </tr>
+  <tr>
+    <tc>JFreeReport-object</tc>
+    <tc>ext.parser.parser-config.objectfactories</tc>
+    <tc>java.util.List</tc>
+    <tc>A list containing the class names of all used object factories.</tc>
+  </tr>
+  <tr>
+    <tc>JFreeReport-object</tc>
+    <tc>ext.parser.parser-config.stylekeyfactories</tc>
+    <tc>java.util.List</tc>
+    <tc>A list containing the class names of all used stylekey factories.</tc>
+  </tr>
+  <tr>
+    <tc>JFreeReport-object</tc>
+    <tc>ext.parser.parser-config.templatefactories</tc>
+    <tc>java.util.List</tc>
+    <tc>A list containing the class names of all used template factories.</tc>
+  </tr>
+  <tr>
+    <tc>JFreeReport-object</tc>
+    <tc>ext.parser.parser-config.datasourcefactories</tc>
+    <tc>java.util.List</tc>
+    <tc>A list containing the class names of all used datasource factories.</tc>
+  </tr>
+  <tr>
+    <tc>JFreeReport-object</tc>
+    <tc>ext.parser.parser-config.elementfactories</tc>
+    <tc>java.util.List</tc>
+    <tc>A list containing the class names of all used element factories.</tc>
+  </tr>
+  <tr>
+    <tc>JFreeReport-object</tc>
+    <tc>ext.parser.template-definition</tc>
+    <tc>java.util.List</tc>
+    <tc>A list containing all predefined templates.</tc>
+  </tr>
+  <tr>
+    <tc>JFreeReport-object</tc>
+    <tc>parser.type</tc>
+    <tc>java.lang.String</tc>
+    <tc>A string marking the type of the parser that was used to create the report.
+    The ext-parser uses "org.jfree.report.modules.parser.ext" and the simple parser
+    uses "org.jfree.report.modules.parser.simple".</tc>
+  </tr>
+  <tr>
+    <tc>Element, TemplateDescription</tc>
+    <tc>ext.parser.template-reference</tc>
+    <tc>java.lang.String</tc>
+    <tc>Contains the name of the referenced template.</tc>
+  </tr>
+  <tr>
+    <tc>JFreeReport-object</tc>
+    <tc>ext.parser.template-definition</tc>
+    <tc>java.util.List</tc>
+    <tc>Contains the defined template descriptions.</tc>
+  </tr>
+</table>
 </body>
 </html>
-</body>
-</html>
+
