New build script to support module structure ...

--- a/jfreereport-ext/webapp/index.html
+++ b/jfreereport-ext/webapp/index.html
@@ -31,6 +31,11 @@
     files, it should be easy to modify the provided page and add browsing over
     the generated content. This task is left to the readed as excercise :)
     </p>
+    <li><a href="xlsreport">Excel-Servlet</a>
+    <p>
+    This example generates an Excel file. The file will not contain any
+    images, as POI does not support this feature yet.
+    </p>
 </ul>
 </body>
 </html>
