Minor changes in the barcode classes; this package is not yet ready for release.

--- a/jfreereport-ext/webapp/index.html
+++ b/jfreereport-ext/webapp/index.html
@@ -22,7 +22,7 @@
     <li><a href="pngreport?page=0">First page of the JPEG-Servlet</a>
     <p>
     This prints the first page of the demo report as PNG file. It is a simple and
-    quick example, how to reference a page within the PNG-Servlet.
+    quick example, how to reference a page from the PNG-Servlet.
     </p>
     <li><a href="png-servlet-frontend.jsp">The complete PNG report</a>
     <p>
@@ -35,6 +35,11 @@
     <p>
     This example generates an Excel file. The file will not contain any
     images, as POI does not support this feature yet.
+    </p>
+    <li><a href="html-include.jsp">HTML Report as JSP-Include</a>
+    <p>
+    In this example, the new BodyFragment generation code is used to embedd
+    the generated content into the calling web page.
     </p>
 </ul>
 </body>
