Errors in Documentation (Cut & Paste Problems)

--- a/jfreereport/source/org/jfree/report/demo/multireport/multireport.html
+++ b/jfreereport/source/org/jfree/report/demo/multireport/multireport.html
@@ -126,14 +126,14 @@ We added one function for every record type. The record types
 used are 'fruit' for the fruit table data and 'color' for the
 color table.
 <pre>
-    &lt;function class="org.jfree.report.function.HideElementByNameFunction" name="hideInvoice"&gt;
+    &lt;function class="org.jfree.report.function.HideElementByNameFunction" name="hideColors"&gt;
       &lt;properties&gt;
         &lt;property name="element"&gt;color&lt;/property&gt;
         &lt;property name="field"&gt;TablePrefix&lt;/property&gt;
       &lt;/properties&gt;
     &lt;/function&gt;
 
-    &lt;function class="org.jfree.report.function.HideElementByNameFunction" name="hideInvoice"&gt;
+    &lt;function class="org.jfree.report.function.HideElementByNameFunction" name="hideFruits"&gt;
       &lt;properties&gt;
         &lt;property name="element"&gt;fruit&lt;/property&gt;
         &lt;property name="field"&gt;TablePrefix&lt;/property&gt;
