Demo restructuring - work in progress ...

--- a/jfreereport/source/org/jfree/report/demo/invoice/package.html
+++ b/jfreereport/source/org/jfree/report/demo/invoice/package.html
@@ -1,8 +1,10 @@
 <html>
 <body>
-A example on how to print invoices, advertising letters and how to combine these
-two reports in a single report. The invoice contains mutiple
-articles. To make it more fun, some of them have additional information
-added (serial numbers in this case).
+<p>
+  A example on how to print invoices, advertising letters and how to combine
+  these two reports in a single report. The invoice contains mutiple
+  articles. To make it more fun, some of them have additional information
+  added (serial numbers in this case).
+</p>
 </body>
 </html>
