--- a/jfreereport/source/org/jfree/report/demo/invoice/combined/combined-invoice.html
+++ b/jfreereport/source/org/jfree/report/demo/invoice/combined/combined-invoice.html
@@ -1,33 +1,40 @@
 <html>
 <head>
-<title>Combined Invoice</title>
+  <title>Combined Invoice</title>
 </head>
+
 <body>
 <h2>Joined Version of the Advertising and Invoice Demo.</h2>
+
 <p>
-This demo combines the Invoice-Demo and the Advertising-Demo into
-a single report. For that we reuse the ideas from the
-'MultiReport-Demo'.
+  This demo combines the Invoice-Demo and the Advertising-Demo into
+  a single report. For that we reuse the ideas from the
+  'MultiReport-Demo'.
 </p>
+
 <h3>The Joining TableModel</h3>
+
 <p>
-We use the JoiningTableModel to join both tablemodels. That
-tablemodel behaves like a primitive version of an SQL-Union
-operation.
+  We use the JoiningTableModel to join both tablemodels. That
+  tablemodel behaves like a primitive version of an SQL-Union
+  operation.
 </p>
+
 <p>
-The Joining Tablemodel combines two independent Tables into
-one large tablemodel. The resulting tablemodel contains all
-columns of the both models and an additional column called
-'TablePrefix'. The column namess of the original table models
-are preceeded by the value stored in the TablePrefix column.
+  The Joining Tablemodel combines two independent Tables into
+  one large tablemodel. The resulting tablemodel contains all
+  columns of the both models and an additional column called
+  'TablePrefix'. The column namess of the original table models
+  are preceeded by the value stored in the TablePrefix column.
 </p>
+
 <p>
-Assume we have the following table models:
+  Assume we have the following table models:
 </p>
+
 <p>
-<code>TableModel modelA = new DefaultTableModel();</code>
-Contents:
+  <code>TableModel modelA = new DefaultTableModel();</code>
+  Contents:
 </p>
 <table border="1">
   <tr>
@@ -44,8 +51,8 @@ Contents:
   </tr>
 </table>
 <p>
-<code>TableModel modelB = new DefaultTableModel();</code>
-Contents:
+  <code>TableModel modelB = new DefaultTableModel();</code>
+  Contents:
 </p>
 <table border="1">
   <tr>
@@ -62,15 +69,16 @@ Contents:
   </tr>
 </table>
 <p>
-We join the tablemodels with the following code:
-<pre>
-JoinedTableModel joinedTable = new JoinedTableModel();
-joinedTable.add ("t_1", modelA);
-joinedTable.add ("t_2", modelB);
-</pre>
+  We join the tablemodels with the following code:
+  <pre>
+    JoinedTableModel joinedTable = new JoinedTableModel();
+    joinedTable.add ("t_1", modelA);
+    joinedTable.add ("t_2", modelB);
+  </pre>
 </p>
+
 <p>
-The resulting tablemodel contents will be:
+  The resulting tablemodel contents will be:
 </p>
 <table border="1">
   <tr>
@@ -110,73 +118,84 @@ The resulting tablemodel contents will be:
   </tr>
 </table>
 <h3>General Structure</h3>
+
 <p>
-When printing the report we have to alter the visibility of
-those bands, which should not be printed for the current
-row type.
+  When printing the report we have to alter the visibility of
+  those bands, which should not be printed for the current
+  row type.
 </p>
+
 <p>
-For that task, we add a function, that preforms that task for
-us. To make things easier for the function and to increase
-maintainability of the report definition, we put all elements
-for a certain row type into an own band. The
-<code>HideElementByNameFunction</code> we use to alter the
-bands visiblities expects the name of the band to match the
-contents of the "TablePrefix" column. If the name defined
-in the function parameter 'element' matches the column value
-found in the 'field', all elements with that name will be
-triggered visible. If the value does not match, the named
-elements will be invisible. All other elements in the band
-will not be affected by the function. 
+  For that task, we add a function, that preforms that task for
+  us. To make things easier for the function and to increase
+  maintainability of the report definition, we put all elements
+  for a certain row type into an own band. The
+  <code>HideElementByNameFunction</code> we use to alter the
+  bands visiblities expects the name of the band to match the
+  contents of the "TablePrefix" column. If the name defined
+  in the function parameter 'element' matches the column value
+  found in the 'field', all elements with that name will be
+  triggered visible. If the value does not match, the named
+  elements will be invisible. All other elements in the band
+  will not be affected by the function.
 </p>
+
 <p>
-We added one function for every record type. The record types
-used are 'invoice' for the invoice data and 'ad' for the
-advertising attached to the invoice.
-<pre>
-    &lt;function class="org.jfree.report.function.HideElementByNameFunction" name="hideInvoice"&gt;
-      &lt;properties&gt;
-        &lt;property name="element"&gt;invoice&lt;/property&gt;
-        &lt;property name="field"&gt;TablePrefix&lt;/property&gt;
-      &lt;/properties&gt;
+  We added one function for every record type. The record types
+  used are 'invoice' for the invoice data and 'ad' for the
+  advertising attached to the invoice.
+  <pre>
+    &lt;function class="org.jfree.report.function.HideElementByNameFunction"
+    name="hideInvoice"&gt;
+    &lt;properties&gt;
+    &lt;property name="element"&gt;invoice&lt;/property&gt;
+    &lt;property name="field"&gt;TablePrefix&lt;/property&gt;
+    &lt;/properties&gt;
     &lt;/function&gt;
 
-    &lt;function class="org.jfree.report.function.HideElementByNameFunction" name="hideInvoice"&gt;
-      &lt;properties&gt;
-        &lt;property name="element"&gt;ad&lt;/property&gt;
-        &lt;property name="field"&gt;TablePrefix&lt;/property&gt;
-      &lt;/properties&gt;
+    &lt;function class="org.jfree.report.function.HideElementByNameFunction"
+    name="hideInvoice"&gt;
+    &lt;properties&gt;
+    &lt;property name="element"&gt;ad&lt;/property&gt;
+    &lt;property name="field"&gt;TablePrefix&lt;/property&gt;
+    &lt;/properties&gt;
     &lt;/function&gt;
-</pre>
+  </pre>
 </p>
+
 <p>
-When comparing the combined report agains the single reports,
-you will notice that all table column references have the name
-of the table (as specified in the JoinedTableModel.add(..)
-method) added as prefix to the column name.
+  When comparing the combined report agains the single reports,
+  you will notice that all table column references have the name
+  of the table (as specified in the JoinedTableModel.add(..)
+  method) added as prefix to the column name.
 </p>
+
 <h3>Groups</h3>
+
 <p>
-To separate the two reports, we introduce a group level
-that separates the reports by it's "TablePrefix" column.
+  To separate the two reports, we introduce a group level
+  that separates the reports by it's "TablePrefix" column.
 </p>
+
 <p>
-That top-level group only has an empty Group-header which
-is used to force a pagebreak between the two reports.
+  That top-level group only has an empty Group-header which
+  is used to force a pagebreak between the two reports.
 </p>
+
 <p>
-Within the invoice and advertising reports, all group field
-definitions have been extended to contain the "TablePrefix"
-column as group column.
+  Within the invoice and advertising reports, all group field
+  definitions have been extended to contain the "TablePrefix"
+  column as group column.
 </p>
+
 <p>
-To get a defined order of the reports, the joined version of
-the advertising report needs to add all fields from the deepest
-group of the invoice report. Technically, the advertising
-report is now a child report of the invoice report. As the
-HideElementByNameFunction hides the invoice report contents
-whenever 'Advertising' contents are printed, that dependency
-is hidden and has no visual representation to the user.
+  To get a defined order of the reports, the joined version of
+  the advertising report needs to add all fields from the deepest
+  group of the invoice report. Technically, the advertising
+  report is now a child report of the invoice report. As the
+  HideElementByNameFunction hides the invoice report contents
+  whenever 'Advertising' contents are printed, that dependency
+  is hidden and has no visual representation to the user.
 </p>
 </body>
 </html>
