--- a/jfreereport/source/org/jfree/report/demo/functions/paint-component.html
+++ b/jfreereport/source/org/jfree/report/demo/functions/paint-component.html
@@ -1,13 +1,20 @@
 <html>
 <head>
-  <title>Percentage Demo</title>
+  <title>Pain Component Demo</title>
 </head>
 <body>
-<h3></h3>
+<h2>Paint Component Demo</h2>
 <p>
-  In this demo, the TableModel contains two columns A and B. The generated 
-  report displays the values in these columns, plus a third value (A/B)
-  formatted as a percentage.
+  This demo shows, how to print arbitary AWT-components
+  using a function.
+</p>
+<h3>Data Structure</h3>
+<p>
+  This demo uses a TableModel, which contains previously
+  created standard components.
+</p>
+<h3>Report structure</h3>
+<p>
 </p>
 </body>
 </html>
