--- a/jfreereport/source/org/jfree/report/demo/csv/generic-demo.html
+++ b/jfreereport/source/org/jfree/report/demo/csv/generic-demo.html
@@ -1,8 +1,11 @@
 <html>
 <head>
-  <title>Generic demo</title>
+  <title>Generic Report Demo (CSV Reader Demo)</title>
 </head>
 <body>
 <h2>Write me</h2>
+<p>
+  This demo needs to be written, before it can be documented.
+</p>
 </body>
 </html>
