Replaced iText and automated some of the maven-related tasks.

--- a/jfreereport/source/org/jfree/report/demo/conditionalgroup/conditional.html
+++ b/jfreereport/source/org/jfree/report/demo/conditionalgroup/conditional.html
@@ -3,13 +3,12 @@
   <title>Conditional Groups</title>
 </head>
 <body>
-  <h2>Conditional groups</h3>
+  <h2>Conditional groups</h2>
   <p>
   This demo shows how to define conditional groups. The report for
   this demo creates a Profit and Loss Statement report for the Open
-  Source accounting package jGnash. The expected output is:
+  Source accounting package jGnash. The expected output looks like:
   </p>
-  <div border="1">
   <pre>
   Income
     Account 1                                      9999.99
@@ -28,7 +27,6 @@
 
   Net Profit/Loss                                 99999.99
   </pre>
-  </div>
   <p>
   As you can see, account 'A' has sub accounts, which should be printed,
   while account 'B' has no sub accounts. According to the control-break-algorithm,
