Fixed the resource loader of the ServletDemo

--- a/jfreereport-ext/webapp/index.html
+++ b/jfreereport-ext/webapp/index.html
@@ -19,7 +19,7 @@
     you'll have to switch to either the DirHtmlFilesystem or the ZipHtmlFilesystem.
     Both output systems are able to generate and manage generated images.
     </p>
-    <li><a href="pngreport?page=0">First page of the JPEG-Servlet</a>
+    <li><a href="pngreport?page=0">First page of the PNG-Servlet</a>
     <p>
     This prints the first page of the demo report as PNG file. It is a simple and
     quick example, how to reference a page from the PNG-Servlet.
