new demo to show how to print internal-frames with JFreeReport

--- a/jfreereport/source/org/jfree/report/demo/functions/paint-component.html
+++ b/jfreereport/source/org/jfree/report/demo/functions/paint-component.html
@@ -6,7 +6,9 @@
 <h2>Paint Component Demo</h2>
 <p>
   This demo shows, how to print arbitary AWT-components
-  using a function.
+  using a function. The component is drawn into an Image.
+  For vector graphics, have a look at the 'component-drawing' demo
+  in the 'layouts' demo package.
 </p>
 <h3>Data Structure</h3>
 <p>
