--- a/jfreereport/source/org/jfree/report/modules/misc/tablemodel/package.html
+++ b/jfreereport/source/org/jfree/report/modules/misc/tablemodel/package.html
@@ -1,3 +1,4 @@
 <html><body>
-TableModel support classes.
+TableModel support classes. The SQL support is now a native part of JFreeReport,
+and there is no need for ResultSetTableModels at all.
 </body></html>
