Text-Alignment; bugfixes in the line-splitting

--- a/liblayout/styletest/tables.html
+++ b/liblayout/styletest/tables.html
@@ -4,6 +4,16 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>asd</title>
+  <style type="text/css">
+    table.test td {
+      margin: 4pt;
+      border: 1px solid black;
+
+    }
+    table.test {
+      border-collapse:collapse;
+    }
+  </style>
 </head>
 <body>
 What makes a table a table?
@@ -17,7 +27,7 @@ What makes a table a table?
 </table>
 
 <hr/>
-<table border="1">
+<table border="1"  class="test">
   <tr>
     <td>
       Data
