Reorganized the renderer so that it follows a clear computation model with separate phases. Doing it GUI style does not work out ..

--- a/liblayout/styletest/alignment.html
+++ b/liblayout/styletest/alignment.html
@@ -8,5 +8,15 @@
   <div style="width:40pt; border: 1px solid red">Test</div>
 
 </p>
+
+<p>
+  test<br>
+  <span style="border: 1pt solid black; font-size:30pt">Xxxx<span style="border: 1pt solid blue; font-size: 30pt; vertical-align:super;">Torin</span></span>
+  <br>test<br>
+  <span style="border: 1pt solid black; font-size:30pt">Xxxx<span style="border: 1pt solid blue; font-size: 30pt;">Torin</span></span><br/>
+  <span style="border: 1pt solid black; font-size:30pt">Xxxx<span style="border: 1pt solid blue; font-size: 30pt;">Torin</span></span>
+</p>
+
+
 </body>
 </html>
