--- a/liblayout/styletest/inline-valign.html
+++ b/liblayout/styletest/inline-valign.html
@@ -39,28 +39,35 @@
 
 <p style="border: 1pt solid black">
   <span style="font-size:10pt">Text
-    <span style="vertical-align:bottom; font-size:40pt">Top</span>
-    more text
-  </span>
-</p>
-
-<p style="border: 1pt solid black">
-  <span style="font-size:10pt">Text
-    <span style="vertical-align:bottom; font-size:40pt">Top</span>
     more text
     <span style="vertical-align:top; font-size:60pt">Top</span>
     more text
   </span>
 </p>
 
-<p style="border: 1pt solid black">
-  <span style="font-size:10pt">Text
-    <span style="vertical-align:bottom; font-size:40pt">Top</span>
-    more text
-    <span style="vertical-align:top; font-size:60pt">Top</span>
-    more text
-  </span>
-</p>
+  <p style="border: 1pt solid black">
+    <span style="font-size:10pt">Text
+      <span style="vertical-align:bottom; font-size:40pt">Bottom</span>
+      more text
+    </span>
+  </p>
 
+  <p style="border: 1pt solid black">
+    <span style="font-size:10pt">Text
+      <span style="vertical-align:bottom; font-size:40pt">Bottom</span>
+      more text
+      <span style="vertical-align:top; font-size:60pt">Top</span>
+      more text
+    </span>
+  </p>
+
+  <p style="border: 1pt solid black">
+    <span style="font-size:10pt">Text
+      <span style="vertical-align:bottom; font-size:40pt">Bottom</span>
+      more text
+      <span style="vertical-align:bottom; font-size:60pt">Bottom</span>
+      more text
+    </span>
+  </p>
 </body>
 </html>
