Pagination working (unless you use tables!)

--- a/liblayout/styletest/tables.html
+++ b/liblayout/styletest/tables.html
@@ -20,6 +20,24 @@
 What makes a table a table?
 <hr/>
 
+<table>
+  <thead>
+
+  </thead>
+  <thead>
+
+  </thead>
+  <tfoot>
+
+  </tfoot>
+  <tfoot>
+
+  </tfoot>
+  <tbody>
+    
+  </tbody>
+</table>
+
 A simple table.
 <table border="1">
   <tr>
