--- a/liblayout/styletest/image-breaks.html
+++ b/liblayout/styletest/image-breaks.html
@@ -1,5 +1,7 @@
 <html>
 <body>
-<img src="denker.gif" alt="Denker" height="3000" width="70"/>
+  <div>
+    <img src="denker.gif" alt="Denker" style="width:100%; height:100%"/>
+  </div>
 </body>
 </html>
